# fastapi

./: Makefile  dependecy.py  exception.py  pyproject.toml  settings.py
database/: database.py
handlers/: __init__.py  auth.py  book.py  ping.py  user.py
models.py/: __init__.py  books.py  user.py
repository/: __init__.py  user.py
schema/: task.py  user.py
service/: __init__.py  auth.py  user.py
